--- a/css/muiind.css
+++ b/css/muiind.css
@@ -11,10 +11,22 @@
 	width: 10%;
 }
 #ttsText{
-	width: 75%
+	width: 20%;
+	border-radius: 30px;
+}
+#ttsText:hover{
+	width: 60%;
+	border-radius: 30px;
+	transition:1s;
 }
 #tts_btn{
-	font-size: 15px;
+	font-size: 17px;
+	height: 7%;
+}
+#tts_btn:hover{
+	border-radius: 30px;
+	background-color: #BBBBBB;
+	transition: 1s;
 }
 #ttsSend{
 	text-align: center;
@@ -23,4 +35,7 @@
 	width: 75%;
 	height: 350px;
 	border-radius: 20px;
+}
+h1:hover{
+	color: cornflowerblue;
 }
